# Nucleus

./: .gitignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bun.lockb  index.html  package-lock.json  package.json  rollup.config.js  theme.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  publish.yml
public/: global.css
src/: App.svelte  global.css  global.d.ts  main.ts  overrides.css  theme.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: directory.rs  encoding.rs  main.rs  terminal.rs
src/components/: style.scss
src/components/Content/: MainContainer.svelte
src/components/Content/Editor/: CodeMirrorEditor.svelte  DefaultTheme.ts  Editor.svelte  Editor.ts  EditorTabs.svelte  Tab.svelte  TabMenu.svelte  Tabs.ts
src/components/Content/Editor/scripts/: Editor.ts  Tab.ts  Tabs.ts
src/components/ContextMenu/: ContextMenu.svelte
src/components/Editor/: CodeMirrorEditor.svelte  syntaxhighlighting.scss
src/components/Editor/scripts/: DefaultTheme.ts  Editor.ts
src/components/FileTree/: FileTree.svelte  LeafNodeMenu.svelte  ParentNodeMenu.svelte  Tree.svelte  TreeData.ts  TreeStore.ts  TreeView.svelte  TreeViewNode.svelte  TreeViewNodeList.svelte
src/components/FileTree/scripts/: TreeData.ts  TreeStore.ts
src/components/Footer/: Footer.svelte  LanguageList.svelte
src/components/Header/: Header.svelte  menu.ts
src/components/Header/header_menus/: FileMenu.ts
src/components/Input/: CheckmarkInput.svelte  Dropdown.svelte  Input.svelte  NumberInput.svelte
src/components/Menu/: Menu.svelte  menu.ts
src/components/Misc/: PasteMyst.svelte
src/components/Modal/: Model.svelte  RenameModel.svelte
src/components/Notifications/: Notification.svelte  Notifications.svelte  Notifications.ts
src/components/Settings/: Settings.svelte  SettingsTree.svelte
src/components/Settings/settings/general/: AppearanceSettings.svelte
src/components/Sidebar/: Sidebar.svelte  Sidebar.ts  SidebarTab.svelte  SidebarView.svelte
src/components/Tabs/: EditorTabs.svelte  Tab.svelte  TabMenu.svelte
src/components/Tabs/scripts/: Tab.ts
src/components/Terminal/: InternalTerminal.svelte  Terminal.svelte
src/components/View/: Editor.svelte  MainView.svelte
src/config/: commands.ts  config.ts  extensionhandler.ts  logger.ts  nucleus-settings.json  themehandler.ts
src/config/extensions/default_themes/: package.json  script.ts
src/config/extensions/default_themes/themes/: default_dark.json  default_light.json
src/config/syntaxhighlighting/: dark.ts
src/config/themes/: dark-theme.json  light-theme.json  themes.ts
src/lib/: Editor.svelte  EditorTabList.svelte  File.ts  FileTree.svelte  Header.svelte  Settings.svelte  Sidebar.svelte  SidebarTab.svelte  SidebarView.svelte  Statusbar.svelte  Tab.svelte  Terminal.svelte  ToolView.svelte  Welcome.svelte
src/lib/FileTree/: FileTreeList.svelte  FileTreeNode.svelte  FileTreeView.svelte
src/lib/Icons/: Directory.svelte
src/lib/Modals/: InputModal.svelte  RenameModal.svelte
src/lib/Notifications/: Notification.svelte  NotificationList.svelte  NotificationToast.svelte  NotificationToasts.svelte  notifications.ts
src/lib/Tab/: Tab.svelte  Tab.ts  TabList.svelte
src/lib/scripts/: Tab.ts
src/lib/utility/: Button.svelte  ContextMenu.svelte  Dropdown.svelte  Input.svelte  Menu.svelte  NotSupported.svelte  Popup.svelte  ProgressBar.svelte  RecentFolders.svelte  Select.svelte
src/scripts/: EditorFile.ts
src/scripts/languages/: languages.json
src/util/icons/: Directory.svelte  File.svelte
